# quantum_bio_mps

./: .gitignore  introduction.py  mini_phi.fa  mps_from_scratch.py  mps_with_numpy.py  phiX174-tax2886930.fa  qiskit_to_mps.py  quantumstate_to_circuit.py  requirements.txt  statevector_simulator_tensor.py  tensornetworkspractice.py  test.py
bio_tensor_networks/: pyvenv.cfg
refactoring/: README.md
refactoring/docs/: mkdocs.yml  requirements_doc.txt
refactoring/docs/docs/: encoding_ref.md  index.md  mps_ref.md  states_ref.md
refactoring/docs/site/: 404.html  index.html  objects.inv
refactoring/docs/site/encoding_ref/: index.html
refactoring/docs/site/mps_ref/: index.html
refactoring/docs/site/search/: search_index.json
refactoring/docs/site/states_ref/: index.html
refactoring/examples/: analyse_convert_to_circuit.py  generate_states.py
refactoring/src/quantum_genome_encoder/: __init__.py  basic_states.py  encoding.py
reformulation/: README.md  requirements.txt  setup.cfg
reformulation/examples/: analyse_genome_entropy.py  benchmark_conversion.py
reformulation/src/quantum_genome_encoder/: __init__.py  basic_states.py  encoding.py  utils.py
