[metadata]
name = quantum_genome_encoder
description_file = README.md
description = Module for encoding genomic data for quantum systems
author = Flod Creevey, Hitham Hassan
license = GPLv3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
packages =
    quantum_genome_encoder
install_requires =
    contourpy==1.2.1
    cycler==0.12.1
    dill==0.3.8
    fonttools==4.53.1
    graphviz==0.20.3
    h5py==3.11.0
    kiwisolver==1.4.5
    matplotlib==3.9.1
    mpmath==1.3.0
    numpy==2.0.1
    opt-einsum==3.3.0
    packaging==24.1
    pbr==6.0.0
    pillow==10.4.0
    pyparsing==3.1.2
    python-dateutil==2.9.0.post0
    qiskit==1.1.1
    rustworkx==0.15.1
    scipy==1.14.0
    six==1.16.0
    stevedore==5.2.0
    symengine==0.11.0
    sympy==1.13.1
    tensornetwork==0.4.6
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    coverage>=7.0
    flake8>=3.9

[flake8]
max-line-length = 140
